--- a/src/pages/strategies/index.astro
+++ b/src/pages/strategies/index.astro
@@ -1,7 +1,7 @@
 ---
 import Layout from '../../layouts/Layout.astro';
-import StrategyCard from '../../components/StrategyCard.astro';
-import FilterBar from '../../components/FilterBar.astro';
+import StrategyCard from '../../components/molecules/StrategyCard.astro';
+import FilterBar from '../../components/molecules/FilterBar.astro';
 import { strategies, getStrategiesByCategory } from '../../data/strategies';
 
 const fundamentalStrategies = getStrategiesByCategory('fundamental');
