--- a/src/pages/stocks/[symbol].astro
+++ b/src/pages/stocks/[symbol].astro
@@ -1,6 +1,6 @@
 ---
 import Layout from '../../layouts/Layout.astro';
-import StockChart from '../../components/StockChart.astro';
+import StockChart from '../../components/organisms/StockChart.astro';
 import { fetchStockPrices } from '../../utils/priceService';
 import type { StockPriceRecord } from '../../utils/priceService';
 
@@ -174,6 +174,7 @@ const downColor = '#ef4444';
 <style>
     .detail-container {
         height: 100vh;
+        height: 100dvh;
         display: flex;
         flex-direction: column;
         padding: 32px;
